tests/pass/09_arrays_and_types.lang
тип Число = целое;
функция Начало() : целое {
    Число[5] м = [10, 20, 0, 0, 0];
    печать(м[0]);
    печать(м[1]);
    м[2] = м[0] + м[1];
    печать(м[2]);
    утверждение(м[2] == 30);
    печать("ARRAYS PROPASSED!");
    вернуть 0;
}
