tests/fail/23_array_out_of_bounds.lang
// ОЖИДАЕТСЯ ОШИБКА: выходит за границы массива
функция Начало() : целое {
    целое[3] а = [1, 2, 3];
    печать(а[5]);
    вернуть 0;
}
